Allow facet-dependency to custom parameters